--- a/app/src/main/res/drawable/back_bt.xml
+++ b/app/src/main/res/drawable/back_bt.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="5dp"/>
-            <gradient android:startColor="#4AC29A" android:endColor="#BDFFF3"/>
+            <solid android:color="@color/blue"/>
         </shape>
     </item>
 </ripple>
