--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,78 +5,98 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="10dp"
-    android:paddingVertical="10dp"
+
     tools:context=".MainActivity"
     android:orientation="vertical">
 
 
-
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
-        android:paddingVertical="10dp"
         android:gravity="center"
-        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:paddingVertical="10dp"
         android:weightSum="3">
 
         <TextView
             android:id="@+id/bt_listen"
             android:layout_width="0dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/back_bt"
+            android:gravity="center"
             android:text="listen"
-            android:layout_weight="1"
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:background="@drawable/back_bt"
-            android:layout_height="40dp"/>
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/bt_listdevice"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:text="list device"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:background="@drawable/back_bt"
-            android:layout_height="40dp"/>
+        <!--        <TextView-->
+        <!--            android:id="@+id/bt_listdevice"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:text="list device"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:textStyle="bold"-->
+        <!--            android:gravity="center"-->
+        <!--            android:background="@drawable/back_bt"-->
+        <!--            android:layout_height="40dp"/>-->
 
         <TextView
             android:id="@+id/txt_status"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="status"
             android:layout_gravity="center"
+            android:layout_weight="2"
+            android:fontFamily="@font/iran_sans"
             android:gravity="center"
-            android:textSize="18dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans"/>
+            android:text="status"
+            android:textSize="18dp" />
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listview_device"
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginBottom="20dp"
-        android:background="#DDDDDD"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <ListView
+            android:id="@+id/listview_device"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/background_border" />
+
+        <TextView
+            android:id="@+id/txt_not_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/iran_sans"
+            android:text="دستگاهی یافت نشد" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txt_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Message"
-        android:textSize="25dp"
+        android:layout_gravity="center_horizontal"
         android:fontFamily="@font/iran_sans"
-        android:layout_gravity="center_horizontal"/>
+        android:text="Message"
+        android:textIsSelectable="true"
+        android:textSize="25dp"
+        />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -84,20 +104,20 @@
         <TextView
             android:id="@+id/bt_send"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:paddingHorizontal="40dp"
-            android:gravity="center"
-            android:textColor="@color/white"
             android:layout_height="40dp"
-            android:textStyle="bold"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/back_bt"
-            android:text="send"/>
+            android:gravity="center"
+            android:paddingHorizontal="40dp"
+            android:text="ارسال"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editxt_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"/>
+            android:inputType="text" />
 
 
     </LinearLayout>
