--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="connected">#82d640</color>
+    <color name="connection_failed">#ff0103</color>
+    <color name="blue">#449fe3</color>
 </resources>
