--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_weight="1"
             android:background="@drawable/back_bt"
             android:gravity="center"
-            android:text="listen"
+            android:text="اتصال"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
@@ -51,8 +51,8 @@
             android:layout_weight="2"
             android:fontFamily="@font/iran_sans"
             android:gravity="center"
-            android:text="status"
-            android:textSize="18dp" />
+            tools:text="status"
+            android:textSize="14dp" />
 
     </LinearLayout>
 
@@ -88,15 +88,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/iran_sans"
-        android:text="Message"
+        tools:text="Message"
+        android:textColor="@color/blue"
         android:textIsSelectable="true"
-        android:textSize="25dp"
+        android:textSize="22dp"
         />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="horizontal">
@@ -116,8 +118,10 @@
         <EditText
             android:id="@+id/editxt_message"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:layout_height="40dp"
+            android:inputType="text"
+            android:paddingHorizontal="10dp"
+            android:background="@drawable/background_border"/>
 
 
     </LinearLayout>
