--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="connection_failed">#ff0103</color>
     <color name="blue">#449fe3</color>
     <color name="gray">#cccccc</color>
+    <color name="matn">#8c8c8c</color>
 </resources>
