--- a/app/src/main/res/drawable/background_border.xml
+++ b/app/src/main/res/drawable/background_border.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#999999"/>
-            <corners android:radius="5dp"/>
+            <stroke android:width="1dp" android:color="#8c8c8c"/>
+            <corners android:radius="200dp"/>
         </shape>
     </item>
 
