--- a/app/src/main/res/drawable/background_border_listview.xml
+++ b/app/src/main/res/drawable/background_border_listview.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#999999"/>
+            <stroke android:width="1dp" android:color="#8c8c8c"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
