--- a/app/src/main/res/drawable/background_border_massage.xml
+++ b/app/src/main/res/drawable/background_border_massage.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="@color/blue"/>
             <corners android:radius="20dp"/>
-            <solid android:color="#7abaeb"/>
+            <solid android:color="#e9f4fc"/>
         </shape>
     </item>
 
