--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="10dp"
-
     tools:context=".MainActivity"
     android:orientation="vertical">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:lottie_autoPlay="true"
+        android:layout_above="@+id/cardview_list"
+        app:lottie_loop="true"
+        android:layout_alignParentTop="true"
+        app:lottie_rawRes="@raw/world"/>
 
 
     <LinearLayout
@@ -16,21 +24,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:layout_above="@+id/cardview_list"
         android:orientation="horizontal"
-        android:paddingVertical="10dp"
-        android:weightSum="3">
+        android:paddingVertical="10dp">
 
-        <TextView
-            android:id="@+id/bt_listen"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/back_bt"
-            android:gravity="center"
-            android:text="اتصال"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+<!--        <TextView-->
+<!--            android:id="@+id/bt_listen"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/back_bt"-->
+<!--            android:gravity="center"-->
+<!--            android:text="اتصال"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textStyle="bold" />-->
 
         <!--        <TextView-->
         <!--            android:id="@+id/bt_listdevice"-->
@@ -57,73 +65,101 @@
     </LinearLayout>
 
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        android:layout_marginBottom="20dp"
+        android:layout_above="@+id/massage1"
+        android:outlineSpotShadowColor="#999999"
+        app:cardCornerRadius="20dp">
 
-        <ListView
-            android:id="@+id/listview_device"
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/background_border" />
-
-        <TextView
-            android:id="@+id/txt_not_found"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:fontFamily="@font/iran_sans"
-            android:text="دستگاهی یافت نشد" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/txt_not_found"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="دستگاهی یافت نشد"
+                android:fontFamily="@font/iran_sans"
+                android:textSize="14dp"
+                android:layout_centerInParent="true"
+                android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/txt_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:fontFamily="@font/iran_sans"
-        tools:text="Message"
-        android:textColor="@color/blue"
-        android:textIsSelectable="true"
-        android:textSize="22dp"
-        />
+
+            <ListView
+                android:id="@+id/listview_device"
+                android:layout_width="match_parent"
+                android:layout_height="300dp" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/massage1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_above="@+id/linearLayout_send_massage"
+        android:background="@drawable/background_border_massage"
+        android:gravity="center"
+        android:paddingVertical="20dp">
+
+        <TextView
+            android:id="@+id/txt_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/iran_sans"
+            android:gravity="center"
+            android:text="مشاهده پیام"
+            android:textColor="@color/white"
+            android:textIsSelectable="true"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout_send_massage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:paddingVertical="10dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
+        <ImageView
             android:id="@+id/bt_send"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
             android:background="@drawable/back_bt"
             android:gravity="center"
-            android:paddingHorizontal="40dp"
-            android:text="ارسال"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:paddingHorizontal="10dp"
+            android:rotation="180"
+            android:src="@drawable/ic_round_send_24" />
 
         <EditText
             android:id="@+id/editxt_message"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
+            android:background="@drawable/background_border"
+            android:fontFamily="@font/iran_sans"
             android:inputType="text"
+            android:hint="پیغام خود را بنویسید"
+            android:textSize="14dp"
+            android:paddingStart="10dp"
             android:paddingHorizontal="10dp"
-            android:background="@drawable/background_border"/>
-
+            android:textColor="#8c8c8c" />
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
